# euclid

./: .gitattributes  CMakeLists.txt
res/: shader.frag  shader.fs  shader.vert  shader.vs
src/: app.cpp  app.hpp  camera.cpp  camera.hpp  main.cpp  objects.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp
